Closed Bug 952874 Opened 11 years ago Closed 11 years ago

Telemetry collection for RSA/DHE key sizes of 1025-1280 bits is wrong

Categories

(Core :: Security: PSM, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla29
Tracking Status
firefox27 --- fixed
firefox28 --- fixed
firefox29 --- fixed

People

(Reporter: briansmith, Assigned: briansmith)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file)

No description provided.
Attachment #8351075 - Flags: review?(dkeeler)
Comment on attachment 8351075 [details] [diff] [review] fix-AccumulateNonECCKeySize.patch Review of attachment 8351075 [details] [diff] [review]: ----------------------------------------------------------------- r=me
Attachment #8351075 - Flags: review?(dkeeler) → review+
By the way, "accumulate" in AccummulateECCCurve is misspelled - maybe it would be nice to fix that while we're here.
https://hg.mozilla.org/integration/mozilla-inbound/rev/d8c1d3f35858 (In reply to David Keeler (:keeler) from comment #2) > By the way, "accumulate" in AccummulateECCCurve is misspelled - maybe it > would be nice to fix that while we're here. Fixed when I checked in the patch.
Comment on attachment 8351075 [details] [diff] [review] fix-AccumulateNonECCKeySize.patch [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 707275 User impact if declined: None, but we'll not have accurate telemetry for certificate public key sizes. Testing completed (on m-c, etc.): Just landed on m-i. Risk to taking this patch (and alternatives if risky): Zero risk to end users. String or IDL/UUID changes made by this patch: None.
Attachment #8351075 - Flags: approval-mozilla-beta?
Attachment #8351075 - Flags: approval-mozilla-aurora?
Attachment #8351075 - Flags: approval-mozilla-beta?
Attachment #8351075 - Flags: approval-mozilla-beta+
Attachment #8351075 - Flags: approval-mozilla-aurora?
Attachment #8351075 - Flags: approval-mozilla-aurora+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: