Bug 952874 - Fix telemetry for RSA/DHE key sizes of 1025-1280 bits and fix misspelling. r=keeler, a=bajaj